@@ -1,4 +1,4 @@
-<!-- start of $Id: html_inbox.php,v 1.44 2002/12/16 15:23:17 rossigee Exp $ -->
+<!-- start of $Id: html_inbox.php,v 1.45 2004/08/04 19:23:55 wolruf Exp $ -->
 <tr bgcolor="<?php echo $glob_theme->inbox_color ?>">
     <td align="center">
         <input type="checkbox" name="msg-<?php echo $tmp['number'] ?>" value="Y" />
@@ -12,7 +12,7 @@
         <?php echo $tmp['attach'] ?>
     </td>
     <td class="inbox" align="left">
-        <a href="<?php echo $_SERVER['PHP_SELF'] ?>?action=aff_mail&amp;mail=<?php echo $tmp['number'] ?>&amp;verbose=0&amp;" title="<?php echo htmlspecialchars($tmp['from']); ?>" <?php if(isset($user_prefs->seperate_msg_win) && $user_prefs->seperate_msg_win) echo "target=\"message\""; ?> ><?php echo htmlspecialchars(display_address ($tmp['from'])); ?></a>
+        <a href="<?php echo $_SERVER['PHP_SELF'] ?>?action=write&amp;mail_to=<?php echo htmlspecialchars($tmp['from']) ?>" title="<?php echo htmlspecialchars($tmp['from']); ?>"><?php echo htmlspecialchars(display_address ($tmp['from'])); ?></a>
     </td>
     <td class="inbox" align="left">
         <a href="<?php echo $_SERVER['PHP_SELF'] ?>?action=aff_mail&amp;mail=<?php echo $tmp['number'] ?>&amp;verbose=0&amp;" title="<?php echo $tmp['subject']? htmlspecialchars($tmp['subject']) : $html_nosubject; ?>" <?php if(isset($user_prefs->seperate_msg_win) && $user_prefs->seperate_msg_win) echo "target=\"message\""; ?> ><?php echo $tmp['subject']? substr(htmlspecialchars($tmp['subject']), 0, 55) : $html_nosubject; ?></a>
@@ -25,4 +25,4 @@
         <?php echo $tmp['size'] ?> <?php echo $html_kb ?>
     </td>
 </tr>
-<!-- end of $Id: html_inbox.php,v 1.44 2002/12/16 15:23:17 rossigee Exp $ -->
+<!-- end of $Id: html_inbox.php,v 1.45 2004/08/04 19:23:55 wolruf Exp $ -->
